# tpaw

./: .flake8  .pre-commit-config.yaml  LICENSE  pyproject.toml  tpaw.py
.github/workflows/: python-package.yml
tests/: test_tpaw.py
tests/data/: groups.html  slash_new.html
tpaw/: __init__.py
