[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tpaw"
authors = [{name = "Bryce Boe", email = "bbzbryce@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/bboe/tpaw"
