[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "Bryce Boe", email = "bbzbryce@gmail.com"}]
classifiers = ["License :: OSI Approved :: BSD License"]
dependencies = ["lxml >=4.9.2", "requests >=2.28"]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "tpaw"

[project.optional-dependencies]
develop = [
    "black >=23.3.0",
    "flake8 >=6.0.0"
]
test = [
    "pytest >=7.3.2"
]

[project.urls]
Home = "https://github.com/bboe/tpaw"
